Fix for 2 contrast issues

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -631,6 +631,14 @@ a#menu-toggle:focus {
     margin-top: -17px;
 }
 
+.debug-notice {
+    color: #fff;
+}
+
+.time-wheel-instructions {
+    color: #454545;
+}
+
 /******************************************************************/
 /* Media queries                                                  */
 /******************************************************************/
